--- a/index.html
+++ b/index.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mproject</title>
+    
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Boxicons -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
+    <!-- Local CSS files (assets papkasida bo'lishi kerak) -->
+    <link rel="stylesheet" href="/assets/css/remixicon.css" />
+    <link rel="stylesheet" href="/assets/css/lib/apexcharts.css" />
+    <link rel="stylesheet" href="/assets/css/lib/dataTables.min.css" />
+    <link rel="stylesheet" href="/assets/css/lib/editor-katex.min.css" />
+    <link rel="stylesheet" href="/assets/css/lib/editor.atom-one-dark.min.css" />
+    <link rel="stylesheet" href="/assets/css/lib/editor.quill.snow.css" />
+    <link rel="stylesheet" href="/assets/css/lib/flatpickr.min.css" />
+    <link rel="stylesheet" href="/assets/css/lib/full-calendar.css" />
+    <link rel="stylesheet" href="/assets/css/lib/jquery-jvectormap-2.0.5.css" />
+    <link rel="stylesheet" href="/assets/css/lib/magnific-popup.css" />
+    <link rel="stylesheet" href="/assets/css/lib/slick.css" />
+    <link rel="stylesheet" href="/assets/css/lib/prism.css" />
+    <link rel="stylesheet" href="/assets/css/lib/file-upload.css" />
+    <link rel="stylesheet" href="/assets/css/lib/audioplayer.css" />
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="/assets/css/style.min.css" />
+    <title>Kiberxavfsizlik markazi</title>
   </head>
   <body>
     <div id="root"></div>
